[package]
name = "server"
version = "0.1.0"
authors = ["James Wilson <james@jsdw.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
chrono = { version = "0.4.19", features = ["serde"] }
futures = "0.3.12"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.61"
structopt = "0.3.21"
tokio = { version = "1.1.1", features = ["full"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
warp = "0.3.0"
