[package]
name = "server"
version = "0.1.0"
authors = ["James Wilson <james@jsdw.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
async-trait = "0.1.42"
chrono = { version = "0.4.19", features = ["serde"] }
env_logger = "0.8.2"
futures = "0.3.12"
log = "0.4.14"
rand = "0.8.3"
rust-argon2 = "0.8.3"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.61"
structopt = "0.3.21"
thiserror = "1.0.23"
tokio = { version = "1.1.1", features = ["full"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
dashmap = "4.0.2"
rpassword = "5.0.1"
time = { version = "0.2.25", features = ["std"] }

[dependencies.rocket]
git = "https://github.com/SergioBenitez/Rocket"
rev = "c24f15c1"
features = ["secrets"]

[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket"
rev = "c24f15c1"
default_features = false
features = ["json"]
